--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#693BB8</color>
+    <color name="background">#FAFAFA</color>
+    <color name="darker_white">#EAEAEA</color>
+    <color name="yellow">#FFD03D</color>
+    <color name="red">#E94852</color>
 </resources>
