OrderActivity and OrderDetailActivity, connecting each activity

--- a/app/src/main/res/layout/activity_bus_detail.xml
+++ b/app/src/main/res/layout/activity_bus_detail.xml
@@ -336,6 +336,7 @@
             android:textStyle="bold"/>
         
         <Button
+            android:id="@+id/bookNowBtn"
             android:layout_width="125dp"
             android:layout_height="40dp"
             android:text="BOOK NOW"
