--- a/app/src/main/res/layout/activity_choose_seats.xml
+++ b/app/src/main/res/layout/activity_choose_seats.xml
@@ -523,6 +523,7 @@
         </RelativeLayout>
 
         <Button
+            android:id="@+id/bookNowBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:backgroundTint="@color/light_purple"
