--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,5 @@
     <color name="dark_yellow">#8C6F12</color>
     <color name="light_purple">#8749F2</color>
     <color name="light_grey">#9A9A9A</color>
+    <color name="green">#61CA5F</color>
 </resources>
