--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -251,6 +251,7 @@
         </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/searchBusBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/search_box"
