--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="light_purple">#8749F2</color>
     <color name="light_grey">#9A9A9A</color>
     <color name="green">#61CA5F</color>
+    <color name="button_purple">#673AB7</color>
 </resources>
