--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -25,11 +25,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Your Ticket"
             android:layout_centerInParent="true"
+            android:text="@string/your_tickets"
             android:textColor="@color/darker_grey"
-            android:textSize="16dp"/>
+            android:textSize="16dp"
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <RelativeLayout
