--- a/app/src/main/res/layout/activity_pick_date.xml
+++ b/app/src/main/res/layout/activity_pick_date.xml
@@ -81,8 +81,7 @@
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/blue"
         android:calendarTextColor="@color/blue"
-        android:theme="@style/DatePicker"
-        />
+        android:theme="@style/DatePicker" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -125,6 +124,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/selectDateBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
